# zero-to-production-rust

./: LICENSE  README.md
email-newsletter/: .env  Cargo.toml  Dockerfile
email-newsletter/configuration/: base.yml
email-newsletter/scripts/: init_db.sh
email-newsletter/src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
email-newsletter/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
email-newsletter/src/routes/: subscriptions.rs
email-newsletter/tests/: test.rs
email-newsletter/tests/api/: health_check.rs  helpers.rs  subscriptions.rs
