[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web = "4.10.2"
tracing-actix-web = "0.7.18"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
config = "0.15.11"
uuid = { version = "1.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.9"
once_cell = "1"
