[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web = "4.11.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-actix-web = "0.7.18"
config = "0.15.11"
uuid = { version = "1.17", features = ["v4"] }
unicode-segmentation = "1"
validator = "0.20"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.3"
reqwest = { version = "0.12.9", default_features = false, features = [
    "json",
    "rustls-tls",
] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
wiremock = "0.6.3"
